# legal-agent

./: .env.example  .gitignore  AGENT_ARCHITECTURE.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_GUIDE.md  LEGAL_REVIEW_PLUGIN_SPEC.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/v1/: advise.py  analysis.py  documents.py  draft.py  laws.py  precedents.py  reports.py  router.py
app/graphs/: advise_graph.py  draft_graph.py  orchestrator.py  review_graph.py
app/llm/: client.py
app/llm/prompts/: advisor_system.py  analyzer_system.py  drafter_system.py  rag_query_gen.py  validator_system.py
app/models/: advise.py  analysis.py  document.py  draft.py  rag.py  security.py  validation.py
app/nodes/: advisor.py  analyzer.py  classifier.py  drafter.py  merger.py  parser.py  rag.py  security.py  validator.py
app/parsers/: clause_splitter.py  docx_parser.py  hwp_parser.py  pdf_parser.py
app/security/: document_scanner.py
app/state/: advise_state.py  draft_state.py  orchestrator_state.py  review_state.py
app/utils/: db_client.py  embedding.py
data/standard_clauses/: employment.json  lease.json  nda.json  service_contract.json
docs/: TODO.md
migrations/: 001_initial_schema.sql
scripts/: ingest_laws.py  ingest_laws_from_api.py  ingest_precedents.py  ingest_standard_clauses.py
tests/test_parsers/: test_clause_splitter.py
tests/test_security/: test_adversarial.py
web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/src/app/: layout.tsx  page.tsx
web/src/hooks/: use-advise.ts  use-draft.ts  use-review.ts
(+18 files in other folders)
